Selenium project with POM and TestNG and Maven and Datadriven - 2nd Commit

--- a/test-output/old/PomTestNGMaven-Suite/methods-alphabetical.html
+++ b/test-output/old/PomTestNGMaven-Suite/methods-alphabetical.html
@@ -1,40 +1,54 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>PomTestNGMaven-Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8b67fd">  <td>21/02/08 16:47:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.pom.qa.testcases.LoginPageTest@536aaa8d]">loginPageTitleTest</td> 
-  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/02/08 16:47:09</td>   <td>5949</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.pom.qa.testcases.LoginPageTest@536aaa8d]">loginTest</td> 
-  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/02/08 16:47:04</td>   <td>185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.mainLoginbtn()[pri:2, instance:com.pom.qa.testcases.LoginPageTest@536aaa8d]">mainLoginbtn</td> 
-  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/02/08 16:46:58</td>   <td>-5465</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.pom.qa.testcases.LoginPageTest@536aaa8d]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="bfbc86">  <td>21/02/08 16:47:11</td>   <td>7372</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.pom.qa.testcases.HomePageTest@e320068]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="bf9bbf">  <td>21/02/08 16:47:22</td>   <td>18757</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.pom.qa.testcases.ContactsPageTest@1f57539]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/02/08 16:47:10</td>   <td>6177</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.pom.qa.testcases.LoginPageTest@536aaa8d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="bfbc86">  <td>21/02/08 16:47:21</td>   <td>17755</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.pom.qa.testcases.HomePageTest@e320068]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="bf9bbf">  <td>21/02/08 16:48:40</td>   <td>96134</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.pom.qa.testcases.ContactsPageTest@1f57539]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="bf9bbf">  <td>21/02/08 16:47:39</td>   <td>35494</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String)[pri:4, instance:com.pom.qa.testcases.ContactsPageTest@1f57539]">validateCreateNewContact</td> 
-  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="bf9bbf">  <td>21/02/08 16:47:59</td>   <td>55992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String)[pri:4, instance:com.pom.qa.testcases.ContactsPageTest@1f57539]">validateCreateNewContact</td> 
-  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="bf9bbf">  <td>21/02/08 16:48:19</td>   <td>76058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String)[pri:4, instance:com.pom.qa.testcases.ContactsPageTest@1f57539]">validateCreateNewContact</td> 
-  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="bfbc86">  <td>21/02/08 16:47:21</td>   <td>17216</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyContactsLinkTest()[pri:3, instance:com.pom.qa.testcases.HomePageTest@e320068]">verifyContactsLinkTest</td> 
-  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="bf9bbf">  <td>21/02/08 16:47:34</td>   <td>30707</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.verifyContactsPageLabel()[pri:1, instance:com.pom.qa.testcases.ContactsPageTest@1f57539]">verifyContactsPageLabel</td> 
-  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="bfbc86">  <td>21/02/08 16:47:19</td>   <td>15280</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyHomePageTitleTest()[pri:1, instance:com.pom.qa.testcases.HomePageTest@e320068]">verifyHomePageTitleTest</td> 
-  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="bf9bbf">  <td>21/02/08 16:47:35</td>   <td>31184</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.verifyNewContactSingleDataTest()[pri:3, instance:com.pom.qa.testcases.ContactsPageTest@1f57539]">verifyNewContactSingleDataTest</td> 
-  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="bf9bbf">  <td>21/02/08 16:47:34</td>   <td>30746</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.verifyNewContactTest()[pri:2, instance:com.pom.qa.testcases.ContactsPageTest@1f57539]">verifyNewContactTest</td> 
-  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="bfbc86">  <td>21/02/08 16:47:19</td>   <td>15321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyUserNameTest()[pri:2, instance:com.pom.qa.testcases.HomePageTest@e320068]">verifyUserNameTest</td> 
-  <td>main@1053631449</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/02/09 16:35:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.pom.qa.testcases.LoginPageTest@1f57539]">loginPageTitleTest</td> 
+  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/02/09 16:35:39</td>   <td>2792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.pom.qa.testcases.LoginPageTest@1f57539]">loginTest</td> 
+  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/02/09 16:35:36</td>   <td>94</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.mainLoginbtn()[pri:2, instance:com.pom.qa.testcases.LoginPageTest@1f57539]">mainLoginbtn</td> 
+  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/02/09 16:35:29</td>   <td>-6418</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.pom.qa.testcases.LoginPageTest@1f57539]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="bfbc86">  <td>21/02/09 16:35:40</td>   <td>3887</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.pom.qa.testcases.HomePageTest@76f2b07d]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="bf9bbf">  <td>21/02/09 16:35:54</td>   <td>17912</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.pom.qa.testcases.ContactsPageTest@704a52ec]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="bf9bbf">  <td>21/02/09 16:36:05</td>   <td>29333</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.pom.qa.testcases.ContactsPageTest@704a52ec]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="bf9bbf">  <td>21/02/09 16:36:38</td>   <td>61954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.pom.qa.testcases.ContactsPageTest@704a52ec]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="bf9bbf">  <td>21/02/09 16:37:00</td>   <td>83726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.pom.qa.testcases.ContactsPageTest@704a52ec]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="bf9bbf">  <td>21/02/09 16:37:03</td>   <td>86700</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.pom.qa.testcases.ContactsPageTest@704a52ec]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/02/09 16:35:39</td>   <td>3050</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.pom.qa.testcases.LoginPageTest@1f57539]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="bfbc86">  <td>21/02/09 16:35:53</td>   <td>16694</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.pom.qa.testcases.HomePageTest@76f2b07d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="bf9bbf">  <td>21/02/09 16:36:04</td>   <td>28422</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.pom.qa.testcases.ContactsPageTest@704a52ec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="bf9bbf">  <td>21/02/09 16:36:37</td>   <td>60873</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.pom.qa.testcases.ContactsPageTest@704a52ec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="bf9bbf">  <td>21/02/09 16:36:59</td>   <td>83040</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.pom.qa.testcases.ContactsPageTest@704a52ec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="bf9bbf">  <td>21/02/09 16:37:03</td>   <td>86698</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.pom.qa.testcases.ContactsPageTest@704a52ec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="bf9bbf">  <td>21/02/09 16:37:03</td>   <td>86703</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.pom.qa.testcases.ContactsPageTest@704a52ec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="bf9bbf">  <td>21/02/09 16:36:49</td>   <td>73392</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String)[pri:3, instance:com.pom.qa.testcases.ContactsPageTest@704a52ec]">validateCreateNewContact</td> 
+  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="bf9bbf">  <td>21/02/09 16:37:03</td>   <td>86693</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String)[pri:3, instance:com.pom.qa.testcases.ContactsPageTest@704a52ec]">validateCreateNewContact</td> 
+  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="bf9bbf">  <td>21/02/09 16:37:03</td>   <td>86700</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String)[pri:3, instance:com.pom.qa.testcases.ContactsPageTest@704a52ec]">validateCreateNewContact</td> 
+  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="bfbc86">  <td>21/02/09 16:35:52</td>   <td>16283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyContactsLinkTest()[pri:3, instance:com.pom.qa.testcases.HomePageTest@76f2b07d]">verifyContactsLinkTest</td> 
+  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="bf9bbf">  <td>21/02/09 16:36:04</td>   <td>28382</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.verifyContactsPageLabel()[pri:1, instance:com.pom.qa.testcases.ContactsPageTest@704a52ec]">verifyContactsPageLabel</td> 
+  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="bfbc86">  <td>21/02/09 16:35:51</td>   <td>15305</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyHomePageTitleTest()[pri:1, instance:com.pom.qa.testcases.HomePageTest@76f2b07d]">verifyHomePageTitleTest</td> 
+  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="bf9bbf">  <td>21/02/09 16:36:16</td>   <td>39704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.verifyNewContactSingleDataTest()[pri:2, instance:com.pom.qa.testcases.ContactsPageTest@704a52ec]">verifyNewContactSingleDataTest</td> 
+  <td>main@1136497418</td>   <td></td> </tr>
+<tr bgcolor="bfbc86">  <td>21/02/09 16:35:51</td>   <td>15311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyUserNameTest()[pri:2, instance:com.pom.qa.testcases.HomePageTest@76f2b07d]">verifyUserNameTest</td> 
+  <td>main@1136497418</td>   <td></td> </tr>
 </table>
